--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<html>
+<html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>Main</title>
   <link rel="stylesheet" href="assignment2.css">
@@ -11,50 +11,60 @@
 <body>
   <div id="wrapper">
     <header>
-      <h1>Shakahola Massacre</h1>
+      <h1> The Shakahola Massacre</h1>
       <nav>
 
         <h2 id="menulink"><a href="#navlinks">Menu</a></h2>
 
-        <ul class="displayed" id="navlinks">
+        <ul id="navlinks">
 
           <li><a href="index.html" class="thispage">Main</a></li>
+          <li><a href="survivor.html">Survivor's Account</a></li>
           <li><a href="sources.html">Sources</a></li>
         </ul>
       </nav>
     </header>
     <div id="hero">
-      <video controls>
-        <source src="video/Hundreds of bodies found.mp4" width="" height="" alt="" />
-      </video>
-
+      <div class="hero video">
+        <video controls>
+          <source src="video/Hundredsofbodiesfound.mp4">
+        </video>
+      </div>
     </div>
-    <main>
-      <h2>Widely published as the "incident"</h2>
-      <p>the Shakahola massacre was the horrific end to many loyal cult followers. At least 300 bodies have been uncovered, but there are predicted to be many more </p>
-      <p></p>
-      <figure><img src="assets/me.jpg" alt="" class="grayscale" />
-        <figcaption> me defeating dwyane (Three Hills, Alberta. June 2022) </figcaption>
-      </figure>
-      <p>First semester at university has been fun but challenging. There are a lot of projects assigned, a lot of
-        papers to read and write, and not enough time in the day. I've made some great friends and already have amazing
-        memories though. Because I have met so many great people, univeristy is a lot of fun. </p>
+    <main id="main">
+      <h3>Widely published as the "incident"</h3>
+      <p>The Shakahola massacre was the horrific end to many loyal cult victims, and labelled as one of the worst
+        cult-related tragedies in recent history. At least 300 bodies have been
+        discovered, but there are predicted to be many more. Over 600 people are still missing, and their remains are
+        predicted to be buried in shallow graves.
+        This cult began in 2010, and ended in April of 2023 with the discovery of the starved children and deceased
+        people. The bodies were found 2 hours from Malindi, a coastal tourist town in
+        Kenya.</p>
+      <p>The people had been following the preacher for many years, however, since 2010, his messages became more
+        end-time focused. Then, near the end of the cult leader's reign, he told his followers that in order for them to
+        get salvation, they had to go without food. This was the way that they would "meet Jesus". They were brainwashed
+        to believe that "starvation was the key to salvation." This doomsday cult
+        gained even more traction when the Covid-19 pandemic started, because it seemed as though the leaders'
+        prophecies were coming true. </p>
+
+      <h3>The Cult Leader</h3>
+      <p>Paul Nthenge Mackenzie is the leader of this tragic death cult. Step by step he built up a following. He
+        targeted the childern of the adults who were already in the cult, because most people would do
+        anything for their kids. The parents thought Mackenzie's solutions were the best shot for their kids to have a
+        good life; to achieve salvation. Children are easily manipulated as well, so that was another reason why
+        Mackenzie targeted them. </p>
+      <p>Ironically, he called himself the pastor of the "Good News International Church." However, earlier in the year
+        he was arrested for accounts of murder of 2 children by starvation and suffocation, but, of course,
+        was released on bail. After he was released, he changed the end of the world date from August 2023 to April
+        2023. Then, in April, 17 people along with Mackenzie were detained and not granted bail
+        for fear that releasing them could negatively impact the police investigations.
+      </p>
+
     </main>
-    <aside>
-      <h2>The Cult Leader</h2>
-      <p>It has been a good place for me so far. I'm learning a lot in my classes, and I'm learning even more about
-        myself and the world.</p>
-      <p>The <a href="https://www.uleth.ca">U of L</a> has always been on my radar as a post-secondary school to attend,
-        considering I have lived here in Lethbridge my whole life. As of right now I'm pretty sure I made the right
-        decision in coming here. There is a lot to do and explore around campus</p>
-      <figure><img src="assets/rattlesnake.jpg" alt="" class="grayscale" />
-        <figcaption>Almost stepped on this rattlesnake (Writing-on-Stone, Alberta. September 2022) </figcaption>
-      </figure>
-    </aside>
     <footer>
-      <p>© Copyright 2023 Serena Van Gaalen</p>
+      <p>NMED 3520-A, 2023 Serena Van Gaalen</p>
     </footer>
-    <script type="text/javascript" src="js/menu.js"></script>
+
 
   </div>
 
